<resources>
    <string name="app_name">DicoEvent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="finished_events">Finished Events</string>
    <string name="image_cover_event">Image cover event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="register">REGISTER NOW</string>
    <string name="search_event">Search event…</string>
    <string name="event_not_found">Event not found</string>
    <string name="back">Back</string>
    <string name="background_event">Background Event</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="remaining_quota">Remaining Quota %1$d</string>
    <string name="registrants">Registrants</string>
    <string name="date">Date</string>
    <string name="by">By Dicoding Event</string>
    <string name="title">DevCoach 151 : Front End | Hidup Lebih Simpel dengan Axios</string>
    <string name="category">SEMINAR</string>
    <string name="place">place</string>
    <string name="progress_registrants">478 / 2000</string>
    <string name="percentage">23.9%</string>
    <string name="description_goes_here">Description goes here…</string>
    <string name="registrants_format">%1$d / %2$d Registered</string>
    <string name="progress_percentage">%.1f%%</string>
    <string name="retry">Retry</string>
    <string name="error_icon">Error Icon</string>
    <string name="favorite_button">Favorite Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="no_favorite_data">No Favorite Data</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_notification">Enable notification</string>
    <string name="event_completed">EVENT COMPLETED</string>
</resources>