<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.dicoevent.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.dicoevent.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_navigation_upcoming_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.dicoevent.ui.finished.FinishedFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_navigation_finished_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <activity
        android:id="@+id/detailActivity"
        android:name="com.dicoding.dicoevent.ui.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail">
        <argument
            android:name="eventId"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="isActiveEvent"
            app:argType="boolean"
            android:defaultValue="true" />
    </activity>
</navigation>